Fixed issue on mobile.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -15,6 +15,7 @@
 
   @media all and not ($desktop) {
     flex-wrap:wrap;
+    flex-direction: column !important;
   }
 }
 
